# image_blurring_pipeline_python

./: .pylintrc  log_tst.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
axon_vision/: check.py  foo.py
docs/: README.md
image_blurring_pipeline_python/: __main__.py  basic_script.py  basic_vmd.py  pipeline.py
image_blurring_pipeline_python/cli/: parse_args.py
image_blurring_pipeline_python/config/: constants.py
image_blurring_pipeline_python/logger/: logger.py  logger_manager.py  setup_process_logger.py
image_blurring_pipeline_python/models/: queue_items.py
image_blurring_pipeline_python/pipeline/: detector.py  displayer.py  streamer.py
